2010-11-30  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdf.R (widget$assignValue): fixed how values are transported
	to R

2010-11-29  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaa.R: tidied up the combining of strings to make javascript calls.

2010-11-28  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckboxgroup.R: Added use.table option. If TRUE widget uses
	grid with checkboxes to select multiple from. Doesn't set value
	from checked! (To fix)

2010-11-27  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckbox.R: added use.togglebutton option

	* R/gwindow.R: if a statusbar, use that to indicate assigning,
	handler running

2010-11-23  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gbigtable.R (widget$setValuesJS): override method from
	gtable. 

2010-11-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* inst/scripts/gWidgetsWWWAJAX.R: for proxystore, changed how we get path, using
	uri not path part of SERVER

	* R/LocalVersion.R (localServerOpen): check for urls, downloads if there

2010-11-21  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gprocessingjs.R: added this back in. Provides a more
	interactive graphic interface, although only low level operations
	are available.

2010-11-20  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtree.R (gtree): added gtree widget. Not fully featured, as
	there is no grid

2010-11-19  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gslider.R (gslider): added tooltipTemplate (hidden) argument
	to specify a template for the tooltip. The value {0} is
	substituted. Again, not so fast. Had issues with 3.3.0 so reverted back

	* change ext-3.0 to ext-3.3.0 (primarily for the grid tree). Not
	so fast. Can't get 3.3.0 to work with chrome and safari so
	reverted back

	* R/aaa.R (EXTComponentWithStore$setSize): For components with