@@ -1,3 +1,8 @@
+2010-12-03  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gnotebook.R (widget$ExtCfgOptions): remove erroneous size
+	setting in config
+
 2010-11-30  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gdf.R (widget$assignValue): fixed how values are transported
